--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,3 +125,32 @@ body {
 .btn-ytb {
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 9.81894px, rgba(255, 255, 255, 0.02) 0px 0px 0px 14.7284px, rgba(0, 0, 0, 0) 0px 0px 0px 19.6379px, rgba(255, 255, 255, 0.02) 0px 0px 0px 24.5473px;
 }
+
+@media only screen and (min-width:768px) {
+  .togerMenu {
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width: 860px) {
+  .text-screen {
+    font-size: 32px;
+  }
+}
+
+
+@media only screen and (max-width: 767px) {
+  .screen-lg {
+    display: none !important;
+  }
+
+  .text-screen {
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .text-screen {
+    font-size: 18px;
+  }
+}
