--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,6 +131,10 @@ body {
   .togerMenu {
     display: none !important;
   }
+
+  .sm-responsive {
+    display: none !important;
+  }
 }
 
 @media only screen and (max-width:945px) {
@@ -138,6 +142,7 @@ body {
     display: flex;
     flex-direction: column;
   }
+
   .w-screen {
     width: 100%;
   }
@@ -158,10 +163,48 @@ body {
   .text-screen {
     font-size: 22px;
   }
+
+  .lg-responsive {
+    display: none !important;
+  }
 }
+
 
 @media only screen and (max-width: 500px) {
   .text-screen {
     font-size: 18px;
   }
+}
+
+.splie-arrow {
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  padding: 0;
+  opacity: .7;
+  background: #ccc;
+}
+
+.splie-list {
+  margin: 0 !important;
+  padding: 0 !important;
+  width: -webkit-max-content;
+  width: max-content;
+  will-change: transform;
+}
+
+.splie-slide {
+  box-sizing: border-box;
+  list-style-type: none !important;
+  margin: 0;
+  flex-shrink: 0;
+  padding: 8px;
 }
